# ebpfmasdemo

./: .gitignore  GEMINI.md  README.md  TECHNICAL_PRINCIPLES.md  VERIFICATION_CN.md  run-in-docker.sh
.specify/memory/: constitution.md
masdeepflow/: .dockerignore  Cargo.toml  Dockerfile  README.md  dockerfilebak
masdeepflow/masdeepflow/: Cargo.toml  build.rs
masdeepflow/masdeepflow-common/: Cargo.toml
masdeepflow/masdeepflow-common/src/: lib.rs
masdeepflow/masdeepflow-ebpf/: Cargo.toml
masdeepflow/masdeepflow-ebpf/src/: main.rs
masdeepflow/masdeepflow/src/: main.rs
specs/001-core-observability/: data-model.md  ebpf_hooks_lifecycle.md  issue.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-core-observability/checklists/: requirements.md
