[package]
name = "masdeepflow-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
masdeepflow-common = { path = "../masdeepflow-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "masdeepflow"
path = "src/main.rs"
